spade-tests/src/snapshots/spade_tests__errors__invalid_field_access.snap
---
source: spade-tests/src/errors.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X has no field named not_a_field
  ┌─ testinput:4:7
  │
4 │     x.not_a_field
  │       ^^^^^^^^^^^ Not a field of X


